--- a/gleaming_joy.ioc
+++ b/gleaming_joy.ioc
@@ -20,41 +20,53 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
 Mcu.Pin1=PF4
-Mcu.Pin10=PA4
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PE8
-Mcu.Pin16=PE9
-Mcu.Pin17=PE11
-Mcu.Pin18=PE14
-Mcu.Pin19=PB12
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PF5
-Mcu.Pin20=PB13
-Mcu.Pin21=PD9
-Mcu.Pin22=PD11
-Mcu.Pin23=PD12
-Mcu.Pin24=PD13
-Mcu.Pin25=PD14
-Mcu.Pin26=PD15
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=VP_SYS_VS_Systick
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM9_VS_OPM
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PC2
-Mcu.Pin6=PC3
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=36
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PF11
+Mcu.Pin23=PE7
+Mcu.Pin24=PE8
+Mcu.Pin25=PE9
+Mcu.Pin26=PE11
+Mcu.Pin27=PE14
+Mcu.Pin28=PE15
+Mcu.Pin29=PB12
+Mcu.Pin3=PF6
+Mcu.Pin30=PB13
+Mcu.Pin31=PD8
+Mcu.Pin32=PD9
+Mcu.Pin33=PD10
+Mcu.Pin34=PD11
+Mcu.Pin35=PD12
+Mcu.Pin36=PD13
+Mcu.Pin37=PD14
+Mcu.Pin38=PD15
+Mcu.Pin39=PA13
+Mcu.Pin4=PF7
+Mcu.Pin40=PA14
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM9_VS_OPM
+Mcu.Pin5=PF8
+Mcu.Pin6=PH0-OSC_IN
+Mcu.Pin7=PH1-OSC_OUT
+Mcu.Pin8=PC2
+Mcu.Pin9=PC3
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -82,6 +94,8 @@ PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Input
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
 PB0.Signal=S_TIM3_CH3
@@ -90,29 +104,51 @@ PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Signal=GPIO_Output
+PB2.Locked=true
+PB2.Signal=GPXTI2
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC3.Locked=true
 PC3.Signal=GPIO_Output
+PC4.Locked=true
+PC4.Signal=GPXTI4
+PC5.Locked=true
+PC5.Signal=GPIO_Input
+PD10.Locked=true
+PD10.Signal=GPXTI10
 PD11.Locked=true
 PD11.Signal=GPIO_Output
 PD12.Signal=S_TIM4_CH1
 PD13.Signal=S_TIM4_CH2
 PD14.Signal=S_TIM4_CH3
 PD15.Signal=S_TIM4_CH4
+PD8.Locked=true
+PD8.Signal=GPIO_Input
 PD9.Locked=true
 PD9.Signal=GPIO_Output
 PE11.Signal=S_TIM1_CH2
 PE14.Locked=true
 PE14.Signal=GPIO_Output
+PE15.Locked=true
+PE15.Signal=GPXTI15
 PE5.Signal=S_TIM9_CH1
+PE7.Locked=true
+PE7.Signal=GPIO_Input
 PE8.Locked=true
 PE8.Signal=GPIO_Output
 PE9.Signal=S_TIM1_CH1
+PF11.Locked=true
+PF11.Signal=GPIO_Input
 PF4.Locked=true
 PF4.Signal=GPIO_Output
 PF5.Locked=true
 PF5.Signal=GPIO_Output
+PF6.Locked=true
+PF6.Signal=GPXTI6
+PF7.Locked=true
+PF7.Signal=GPXTI7
+PF8.Locked=true
+PF8.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -182,6 +218,18 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2
