--- a/gleaming_joy.ioc
+++ b/gleaming_joy.ioc
@@ -94,6 +94,8 @@ PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_PuPd
+PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Input
 PA6.Signal=S_TIM3_CH1
@@ -104,16 +106,24 @@ PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_PuPd
+PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPXTI2
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PC3.Locked=true
 PC3.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_PuPd
+PC4.GPIO_PuPd=GPIO_PULLDOWN
 PC4.Locked=true
 PC4.Signal=GPXTI4
+PC5.GPIOParameters=GPIO_PuPd
+PC5.GPIO_PuPd=GPIO_PULLUP
 PC5.Locked=true
 PC5.Signal=GPIO_Input
+PD10.GPIOParameters=GPIO_PuPd
+PD10.GPIO_PuPd=GPIO_PULLDOWN
 PD10.Locked=true
 PD10.Signal=GPXTI10
 PD11.Locked=true
@@ -122,6 +132,8 @@ PD12.Signal=S_TIM4_CH1
 PD13.Signal=S_TIM4_CH2
 PD14.Signal=S_TIM4_CH3
 PD15.Signal=S_TIM4_CH4
+PD8.GPIOParameters=GPIO_PuPd
+PD8.GPIO_PuPd=GPIO_PULLUP
 PD8.Locked=true
 PD8.Signal=GPIO_Input
 PD9.Locked=true
@@ -129,24 +141,36 @@ PD9.Signal=GPIO_Output
 PE11.Signal=S_TIM1_CH2
 PE14.Locked=true
 PE14.Signal=GPIO_Output
+PE15.GPIOParameters=GPIO_PuPd
+PE15.GPIO_PuPd=GPIO_PULLDOWN
 PE15.Locked=true
 PE15.Signal=GPXTI15
 PE5.Signal=S_TIM9_CH1
+PE7.GPIOParameters=GPIO_PuPd
+PE7.GPIO_PuPd=GPIO_PULLUP
 PE7.Locked=true
 PE7.Signal=GPIO_Input
 PE8.Locked=true
 PE8.Signal=GPIO_Output
 PE9.Signal=S_TIM1_CH1
+PF11.GPIOParameters=GPIO_PuPd
+PF11.GPIO_PuPd=GPIO_PULLUP
 PF11.Locked=true
 PF11.Signal=GPIO_Input
 PF4.Locked=true
 PF4.Signal=GPIO_Output
 PF5.Locked=true
 PF5.Signal=GPIO_Output
+PF6.GPIOParameters=GPIO_PuPd
+PF6.GPIO_PuPd=GPIO_PULLDOWN
 PF6.Locked=true
 PF6.Signal=GPXTI6
+PF7.GPIOParameters=GPIO_PuPd
+PF7.GPIO_PuPd=GPIO_PULLDOWN
 PF7.Locked=true
 PF7.Signal=GPXTI7
+PF8.GPIOParameters=GPIO_PuPd
+PF8.GPIO_PuPd=GPIO_PULLUP
 PF8.Locked=true
 PF8.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Oscillator
